WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298968
Fix a CGImageRef memory leak after
297373@main
https://bugs.webkit.org/show_bug.cgi?id=298968
Summary
Fix a CGImageRef memory leak after 297373@main
Wenson Hsieh
Reported
2025-09-16 10:40:00 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-16 10:40:09 PDT
<
rdar://problem/160703923
>
Wenson Hsieh
Comment 2
2025-09-16 10:42:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50818
EWS
Comment 3
2025-09-16 14:46:31 PDT
Committed
300051@main
(b5251ae87966): <
https://commits.webkit.org/300051@main
> Reviewed commits have been landed. Closing PR #50818 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug