Fix a CGImageRef memory leak after 297373@main https://bugs.webkit.org/show_bug.cgi?id=298968 rdar://160703923

Reviewed by Abrar Rahman Protyasha and Matt Woodrow.

Add a missing `adoptCF(…)` around `CGImageCreateCopyWithContentHeadroom`, which returns a retained
`CGImageRef`.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::takeSnapshot):

Canonical link: https://commits.webkit.org/300051@main